--- a/Jwt-node/package.json
+++ b/Jwt-node/package.json
@@ -1,1 +1,20 @@
-{"name":"prodigy_fs_01","version":"1.0.0","main":"index.js","scripts":{"test":"echo \"Error: no test speciefied\" && exit 1"},"author":"","license":"ISC","dependencies":{"bcrypt":"^5.1.1","cors":"^2.8.5","express":"^4.19.2","mongoose":"^8.5.3"},"keywords":[],"description":"","devDependencies":{"@types/bcrypt":"^5.0.2","@types/cors":"^2.8.17","@types/express":"^4.17.21"}}
+{
+  "name":"prodigy_fs_01",
+  "version":"1.0.0",
+  "main":"index.js",
+  "scripts":{"test":"echo \"Error: no test speciefied\" && exit 1"},
+  "author":"",
+  "license":"ISC",
+  "dependencies":{
+    "bcrypt":"^5.1.1",
+    "cors":"^2.8.5",
+    "express":"^4.19.2",
+    "mongoose":"^8.5.3"
+  },
+  "keywords":[],
+  "description":"",
+  "devDependencies":{
+    "@types/bcrypt":"^5.0.2",
+    "@types/cors":"^2.8.17",
+    "@types/express":"^4.17.21"}
+}
